--- a/dz2/CmakeLists.txt
+++ b/dz2/CmakeLists.txt
@@ -6,11 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
 
-add_executable(dz1 
+add_executable(dz2 
     src/cat.cpp
+    src/commandParser.cpp
     src/echo.cpp
     src/main.cpp
     src/openFile.cpp
-    src/pipeLine.cpp
-    src/tailOperation.cpp
+    src/tail.cpp
 )
