--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: cpp_executable
-          path: build/MyProject
+          path: build/dz2
 
   dynamic-analysis:
     needs: build
@@ -44,11 +44,11 @@ jobs:
           path: ./cpp_executable
 
       - name: Check folder
-        run: chmod +x ./cpp_executable/MyProject
+        run: chmod +x ./cpp_executable/dz2
 
       - name: Run Valgrind
         run: |
-          valgrind --leak-check=full ./cpp_executable/MyProject
+          valgrind --leak-check=full ./cpp_executable/dz2
           if [ $? -ne 0 ]; then exit 1; fi
         shell: bash
 
