--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Build code
         run: |
-          mkdir dz2/build
-          cd dz2/build 
+          mkdir build
+          cd build 
           cmake ..
           make
         shell: bash
