--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
     src/main.cpp
     src/openFile.cpp
     src/tail.cpp
+    src/conveyorOperation.cpp
 )
 
 include_directories(include)
